# snowpity

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  EXAMPLE.env  README.md  deny.toml  docker-compose.yml  typos.toml  x.nu
crates/metrics-bat-macros/: Cargo.toml
crates/metrics-bat-macros/src/: lib.rs  metered.rs
crates/snowpity-tg/: Cargo.toml  sqlx-data.json
crates/snowpity-tg-macros/: Cargo.toml
crates/snowpity-tg-macros/src/: lib.rs  metered_db.rs
crates/snowpity-tg/.sqlx/: query-11cd0d4df18e8102bb62e39f7e302b6f1891cff1254c6c8b365763108e059cd2.json  query-393eb8482138bb60e3fbd9aecf7bd6119fb29ec7c890bc606e1b3e0fc38a8049.json  query-95b6f664d75144c2b7b18577dead879b07a8964225de485c1132f1d6181b212c.json  query-a6e246e234fa38d77a58fa53cece159ec185a9c1cafc7c9abb749e0d8f89d55a.json  query-c09f36d26d156a09ff2d988a0e3e8ca03d006e68a4da7e0e8987a2b2532e7b5b.json  query-c61aa9fb3695bb9c56454cb9fd8a54131b9240519695f0becae463cb05733442.json  query-c9e557f08c7b42fce54e0025ed466fd8e246a6226f317e4a37db4a5ac5c83aef.json  query-c9fa1598389eef6d48b59d958979747a38ca35874e5f6aacde44cecfad92c00f.json  query-e2001624889ad63304364a1d7b6fb16b9b04117b4a0abdb8549e8e0964e4c423.json
crates/snowpity-tg/benches/: image_resize.rs
crates/snowpity-tg/migrations/: 20221222231633_create_tg_chat_table.down.sql  20221222231633_create_tg_chat_table.up.sql  20221222232655_create_tg_media_cache_table.up.sql  20221226200100_drop_gifs_derpi_cache.down.sql  20221226200100_drop_gifs_derpi_cache.up.sql  20230102155035_create_tg_twitter_media_cache_table.down.sql  20230121154418_rename_media_cache_to_blob_cache.down.sql  20230201015043_create_tg_deviant_art_blob_cache_table.up.sql  20230825135840_drop_documents_cache.up.sql  20240412183230_rename_tg_derpibooru_blob_cache.down.sql  20240412183230_rename_tg_derpibooru_blob_cache.up.sql  20240412190218_create_ponerpics_table.down.sql  20240412190218_create_ponerpics_table.up.sql  20240421171949_create_twibooru_table.down.sql  20240421171949_create_twibooru_table.up.sql  20240427175232_create_ponybooru_table.down.sql  20240427175232_create_ponybooru_table.up.sql  20240501162122_create_manebooru_table.down.sql  20240501162122_create_manebooru_table.up.sql  20240501162310_create_furbooru_table.down.sql  20240501162310_create_furbooru_table.up.sql  20240501175111_create_derpilike_tables.down.sql  20240501175111_create_derpilike_tables.up.sql
crates/snowpity-tg/src/: config.rs  ftai.rs  lib.rs  main.rs  sysinfo.rs
crates/snowpity-tg/src/db/: constraints.rs  error.rs  mod.rs
crates/snowpity-tg/src/error/: mod.rs
crates/snowpity-tg/src/http/: mod.rs
crates/snowpity-tg/src/observability/: metrics.rs
crates/snowpity-tg/src/posting/: all_platforms.rs  mod.rs  model.rs  platform.rs  service.rs  tg_upload.rs
crates/twitter-scraper/: Cargo.toml  build.rs
crates/twitter-scraper/src/: error.rs  ffi.rs  lib.rs
metrics-bat/: Cargo.toml
metrics-bat/src/: lib.rs  timing.rs
snowpity-tg/: Cargo.toml  build.rs  sqlx-data.json
snowpity-tg/migrations/: 20220612130504_create_tg_chat_banned_phrases_table.down.sql  20221222231633_create_tg_chats_table.down.sql  20221222231633_create_tg_chats_table.up.sql  20221222232655_create_tg_media_cache_table.down.sql  20221222232655_create_tg_media_cache_table.up.sql  20221231021401_rename_media_cache.down.sql  20221231021401_rename_media_cache.up.sql  20230102155035_create_tg_twitter_media_cache_table.up.sql  20230121154418_rename_media_cache_to_blob_cache.down.sql  20230121154418_rename_media_cache_to_blob_cache.up.sql  20230201015043_create_tg_deviant_art_blob_cache_table.down.sql
snowpity-tg/src/: config.rs  derpibooru.rs  encoding.rs  error.rs  ftai.rs  http.rs  lib.rs  main.rs  media.rs  media_conv.rs  metrics.rs  sysinfo.rs  temp_file.rs  url.rs
snowpity-tg/src/db/: constraints.rs  conv.rs  error.rs  mod.rs  tg_chat_banned_words.rs  tg_chats.rs  tg_derpi_media_cache.rs  tg_media_cache.rs
snowpity-tg/src/derpi/: mod.rs  rpc.rs
snowpity-tg/src/error/: ext.rs  macros.rs  mod.rs
snowpity-tg/src/http/: basic_ext.rs  json_ext.rs  mod.rs
snowpity-tg/src/media_cache/: mod.rs  service.rs
snowpity-tg/src/media_host/: mod.rs
snowpity-tg/src/metrics/: macros.rs  mod.rs
snowpity-tg/src/observability/: logging.rs  mod.rs
snowpity-tg/src/posting/: all_platforms.rs  error.rs  mod.rs  model.rs  platform.rs  service.rs  services.rs  tg_upload.rs
snowpity-tg/src/tg/: bot_joined_chat.rs  captcha.rs  config.rs  inline_query.rs  message_from_channel.rs  mod.rs  updates.rs
snowpity-tg/src/tg/cmd/: mod.rs  (+1 more)
snowpity-tg/src/util/: chrono_ext.rs  display.rs  encoding.rs  http.rs  media_conv.rs  mod.rs  reqwest_ext.rs  std_ext.rs  teloxide_ext.rs  tokio_ext.rs
sqlx-bat/: Cargo.toml
sqlx-bat/src/: lib.rs  misc.rs  sea_query_ext.rs
sqlx-bat/src/conv/: impls.rs  mod.rs  std_impls.rs
veebot-telegram/: Cargo.toml  build.rs  sqlx-data.json
veebot-telegram/migrations/: 20220612130450_create_tg_chats_table.down.sql  20220612130450_create_tg_chats_table.up.sql  20220612130504_create_tg_chat_banned_patterns_table.down.sql  20220612130504_create_tg_chat_banned_patterns_table.up.sql  20220612130504_create_tg_chat_banned_phrases_table.up.sql  20220612130504_create_tg_chat_banned_words_table.up.sql
veebot-telegram/src/: banned_words.rs  config.rs  derpibooru.rs  error.rs  ftai.rs  lib.rs  main.rs  util.rs
veebot-telegram/src/cmd/: mod.rs
veebot-telegram/src/db/: config.rs  db_constraints.rs  media_cache.rs  mod.rs  tg_chat_banned_patterns.rs  tg_chat_banned_words.rs  tg_chats.rs
veebot-telegram/src/derpi/: mod.rs  rpc.rs
veebot-telegram/src/tg/: captcha.rs  config.rs  inline_query.rs  mod.rs  updates.rs
veebot-telegram/src/util/: chrono_ext.rs  encoding.rs  mod.rs  reqwest_ext.rs  sqlx_ext.rs  std_ext.rs  teloxide_ext.rs
veebot-telegram/tg_chats_migrations/: 20220612130450_create_tg_chats_table.up.sql
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/src/cmd/: build.rs  clean_data.rs  fmt_aliases.rs  mod.rs  start.rs  stop.rs
xtask/src/util/: fs.rs  mod.rs
(+266 files in other folders)
