[workspace]
members = ["crates/*"]

default-members = ["crates/snowpity-tg"]

resolver = "2"

[profile.dev]
debug = 0

[profile.bench]
debug = 1

[profile.release]
debug         = 1
lto           = "fat"
opt-level     = 3
# The less parallel the build is, the more context the compiler has to optimize
codegen-units = 1

[workspace.package]
version = "0.8.1"

authors = ["Veetaha <veetaha2@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
assert_matches        = "1.5"
async-trait           = "0.1"
base64                = "0.21"
bytes                 = "1.1"
cgo                   = "0.3"
criterion             = "0.5"
darling               = "0.20"
derivative            = "2.2"
derive_more           = "0.99"
display-error-chain   = "=0.1.1"
dotenvy               = "0.15"
dptree                = "0.3"
easy-ext              = "1.0"
envy                  = "0.4"
expect-test           = "1.4"
fast_image_resize     = "2.5"
from_variants         = "1.0"
fs-err                = "2.7"
futures               = "0.3"
humansize             = "2.1"
image                 = "0.24"
inventory             = "0.3"
itertools             = "0.11"
lazy-regex            = "2.3"
log                   = "0.4"
metrics               = "0.21"
nanoid                = "0.4"
num_enum              = "0.6"
ogg-opus              = "0.1"
parking_lot           = "0.12"
pin-project-lite      = "0.2"
proc-macro2           = "1.0"
quote                 = "1.0"
rand                  = "0.8"
reqwest-middleware    = "0.2"
reqwest-retry         = "0.2"
retry-policies        = "0.1"
serde_json            = "1.0"
serde_yaml            = "0.9"
sha2                  = "0.10"
shlex                 = "1.1"
syn                   = "2.0"
sysinfo               = "0.29"
task-local-extensions = "0.1"
tempfile              = "3.3"
thiserror             = "1.0"
tokio                 = "1.21"
tracing               = "0.1"
url                   = "2.2"
wav_io                = "0.1"

# Deps with feature overrides
chrono                      = { version = "0.4", features = ["clock", "std"], default-features = false }
clap                        = { version = "4.0", features = ["derive"] }
metrics-exporter-prometheus = { version = "0.12", default-features = false }
reqwest                     = { version = "0.11", features = ["rustls-tls"], default-features = false }
sea-query                   = { version = "0.28", features = ["attr"], default-features = false }
sea-query-binder            = { version = "0.3", features = ["sqlx-postgres"], default-features = false }
serde                       = { version = "1.0", features = ["derive"] }
serde_with                  = { version = "3.0", features = ["json"] }
sqlx                        = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "offline"] }
strum                       = { version = "0.25", features = ["derive"] }
teloxide                    = { version = "0.12", features = ["rustls"], default-features = false }
test-log                    = { version = "0.2", features = ["trace"], default-features = false }
timeago                     = { version = "0.4", features = ["chrono"] }
tracing-error               = { version = "0.2", default-features = false }
tracing-loki                = { version = "0.2", features = ["rustls", "compat-0-2-1"], default-features = false }
tracing-subscriber          = { version = "0.3", features = ["env-filter"] }
vergen                      = { version = "8.2", features = ["build", "rustc", "git", "gix", "cargo"] }

# Path deps
metrics-bat        = { path = "crates/metrics-bat" }
metrics-bat-macros = { path = "crates/metrics-bat-macros" }
snowpity-tg-macros = { path = "crates/snowpity-tg-macros" }
sqlx-bat           = { path = "crates/sqlx-bat" }
test-bat           = { path = "crates/test-bat" }
twitter-scraper    = { path = "crates/twitter-scraper" }
