[workspace]
members = ["crates/*"]

default-members = ["crates/snowpity-tg"]

resolver = "2"

[profile.dev]
debug = 0

[profile.bench]
debug = 1

[profile.release]
debug     = 1
lto       = "fat"
opt-level = 3
# The less parallel the build is, the more context the compiler has to optimize
codegen-units = 1

[workspace.package]
version = "0.10.0"

authors = ["Veetaha <veetaha2@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
assert_matches      = "1.5"
async-trait         = "0.1"
base64              = "0.22"
bytes               = "1.1"
cgo                 = "0.4"
criterion           = "0.7"
darling             = "0.21"
derive_more         = { version = "2.0", features = ["deref", "from_str", "display"] }
display-error-chain = "=0.2.2"
dotenvy             = "0.15"
dptree              = "0.5"
easy-ext            = "1.0"
envy                = "0.4"
expect-test         = "1.4"
fast_image_resize   = "5.2"
from_variants       = "1.0"
fs-err              = "3.1"
futures             = "0.3"
http                = "1.3"
humansize           = "2.1"
image               = "0.25"
inventory           = "0.3"
itertools           = "0.14"
lazy-regex          = "3.0"
log                 = "0.4"
metrics             = "0.24"
nanoid              = "0.4"
num_enum            = "0.7"
ogg-opus            = "0.1"
parking_lot         = "0.12"
pin-project-lite    = "0.2"
proc-macro2         = "1.0"
quote               = "1.0"
rand                = "0.9"
reqwest-middleware  = "0.4"
reqwest-retry       = "0.7"
serde_json          = "1.0"
serde_yaml          = "0.9"
sha2                = "0.10"
shlex               = "1.1"
syn                 = "2.0"
sysinfo             = "0.37"
tempfile            = "3.3"
thiserror           = "2.0"
tokio               = "1.21"
tracing             = "0.1"
url                 = "2.2"
wav_io              = "0.1"

# Deps with feature overrides
chrono                      = { version = "0.4", features = ["clock", "std"], default-features = false }
clap                        = { version = "4.0", features = ["derive"] }
metrics-exporter-prometheus = { version = "0.17", default-features = false }
reqwest                     = { version = "0.12", features = ["rustls-tls"], default-features = false }
sea-query                   = { version = "0.32", features = ["attr", "derive", "backend-postgres"], default-features = false }
sea-query-binder            = { version = "0.7", features = ["sqlx-postgres"], default-features = false }
serde                       = { version = "1.0", features = ["derive"] }
serde_with                  = { version = "3.0", features = ["json"] }
sqlx                        = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
strum                       = { version = "0.27", features = ["derive"] }
teloxide                    = { version = "0.17", features = ["rustls"], default-features = false }
test-log                    = { version = "0.2", features = ["trace"], default-features = false }
timeago                     = { version = "0.5", features = ["chrono"] }
tracing-error               = { version = "0.2", default-features = false }
tracing-loki                = { version = "0.2", features = ["rustls", "compat-0-2-1"], default-features = false }
tracing-subscriber          = { version = "0.3", features = ["env-filter"] }
vergen                      = { version = "8.2", features = ["build", "rustc", "git", "gix", "cargo"] }

# Path deps
metrics-bat        = { path = "crates/metrics-bat" }
metrics-bat-macros = { path = "crates/metrics-bat-macros" }
snowpity-tg-macros = { path = "crates/snowpity-tg-macros" }
sqlx-bat           = { path = "crates/sqlx-bat" }
test-bat           = { path = "crates/test-bat" }
twitter-scraper    = { path = "crates/twitter-scraper" }
