[package]
name = "snowpity-tg"

edition = "2021"

authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
assert_matches      = { workspace = true }
async-trait         = { workspace = true }
base64              = { workspace = true }
bytes               = { workspace = true }
chrono              = { workspace = true, features = ["serde"] }
derive_more         = { workspace = true }
display-error-chain = { workspace = true }
dotenv              = { workspace = true }
dptree              = { workspace = true }
duplicate           = { workspace = true }
easy-ext            = { workspace = true }
envy                = { workspace = true }
futures             = { workspace = true }
humansize           = { workspace = true }
itertools           = { workspace = true }
lazy-regex          = { workspace = true }
nanoid              = { workspace = true }
ogg-opus            = { workspace = true }
parking_lot         = { workspace = true }
reqwest             = { workspace = true, features = ["json"] }
serde               = { workspace = true }
serde_json          = { workspace = true }
serde_with          = { workspace = true }
serde_yaml          = { workspace = true }
sysinfo             = { workspace = true }
thiserror           = { workspace = true }
timeago             = { workspace = true }
tokio               = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing             = { workspace = true }
tracing-futures     = { workspace = true }
tracing-loki        = { workspace = true }
tracing-subscriber  = { workspace = true }
url                 = { workspace = true, features = ["serde"] }
wav_io              = { workspace = true }

entities  = { path = "../entities" }
migration = { path = "../migration" }

[dependencies.sea-orm]
features  = ["macros", "debug-print"]
workspace = true

[dependencies.teloxide]
features  = ["cache-me", "ctrlc_handler", "macros", "throttle", "trace-adaptor"]
workspace = true

[dev-dependencies]
expect-test = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
