[package]
name = "snowpity-tg"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
assert_matches              = { workspace = true }
async-trait                 = { workspace = true }
base64                      = { workspace = true }
bytes                       = { workspace = true }
chrono                      = { workspace = true, features = ["serde"] }
derive_more                 = { workspace = true }
display-error-chain         = { workspace = true }
dotenv                      = { workspace = true }
dptree                      = { workspace = true }
duplicate                   = { workspace = true }
easy-ext                    = { workspace = true }
envy                        = { workspace = true }
fs-err                      = { workspace = true, features = ["tokio"] }
futures                     = { workspace = true }
humansize                   = { workspace = true }
itertools                   = { workspace = true }
lazy-regex                  = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
nanoid                      = { workspace = true }
num_enum                    = { workspace = true }
ogg-opus                    = { workspace = true }
parking_lot                 = { workspace = true }
reqwest                     = { workspace = true, features = ["json"] }
reqwest-middleware          = { workspace = true }
reqwest-retry               = { workspace = true }
sea-query                   = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
serde_with                  = { workspace = true }
serde_yaml                  = { workspace = true }
sqlx                        = { workspace = true }
strum                       = { workspace = true }
sysinfo                     = { workspace = true }
task-local-extensions       = { workspace = true }
teloxide                    = { workspace = true, features = ["cache-me", "ctrlc_handler", "macros", "throttle", "trace-adaptor"] }
tempfile                    = { workspace = true }
thiserror                   = { workspace = true }
timeago                     = { workspace = true }
tokio                       = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "process"] }
tracing                     = { workspace = true }
tracing-error               = { workspace = true }
tracing-loki                = { workspace = true }
tracing-subscriber          = { workspace = true }
url                         = { workspace = true, features = ["serde"] }
wav_io                      = { workspace = true }

metrics-bat        = { workspace = true, features = ["exporter-prometheus"] }
snowpity-tg-macros = { workspace = true }
sqlx-bat           = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
