[package]
name = "veebot-telegram"
version = "0.1.0"
authors = ["Veetaha <veetaha2@gmail.com>"]
edition = "2021"
publish = false
autobins = true

[dependencies]
anyhow = "1.0"
assert_matches = "1.5"
async-trait = "0.1"
backtrace = "0.3"
bytes = "1.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
display-error-chain = "=0.1.0" # TODO(Veetaha): make `elastio/stdx` open-source :facepalm:
dotenv = "0.15"
dptree = "0.2"
duplicate = "0.4"
easy-ext = "1.0"
envy = "0.4"
futures = "0.3"
itertools = "0.10"
nanoid = "0.4"
once_cell = "1.5"
parking_lot = "0.12"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
thiserror = "1.0"
timeago = { version = "0.3", features = ["chrono"] }
tokio = { version = "1.19", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.2", features = ["serde"] }

[dependencies.teloxide]
version = "0.9"
features = [
    "auto-send",
    "cache-me",
    "ctrlc_handler",
    "macros",
    "throttle",
    "trace-adaptor",
]
