[package]
name = "veebot-telegram"
version = "0.4.1"
authors = ["Veetaha <veetaha2@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
aes-gcm-siv = "0.10"
anyhow = "1.0"
assert_matches = "1.5"
async-recursion = "1.0"
async-trait = "0.1"
backtrace = "0.3"
base64 = "0.13"
bytes = "1.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
display-error-chain = "=0.1.1" # TODO(Veetaha): make `elastio/stdx` open-source :facepalm:
dotenv = "0.15"
dptree = "0.3"
duplicate = "0.4"
easy-ext = "1.0"
envy = "0.4"
futures = "0.3"
hmac = "0.12"
itertools = "0.10"
nanoid = "0.4"
ogg-opus = "0.1"
once_cell = "1.5"
parking_lot = "0.12"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "1.14", features = ["json"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "offline"] }
thiserror = "1.0"
timeago = { version = "0.3", features = ["chrono"] }
tokio = { version = "1.19", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
url = { version = "2.2", features = ["serde"] }
wav_io = "0.1"

[dependencies.teloxide]
version = "0.10"
features = [
    "auto-send",
    "cache-me",
    "ctrlc_handler",
    "macros",
    "throttle",
    "trace-adaptor",
]

[build-dependencies]
vergen = { version = "7.2", default-features = false, features = ["build", "rustc", "git", "cargo"] }
