[package]
name = "veebot-telegram"

edition = "2021"

authors = ["Veetaha <veetaha2@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false
version = "0.4.1"

[dependencies]
anyhow              = { workspace = true }
assert_matches      = { workspace = true }
async-recursion     = { workspace = true }
async-trait         = { workspace = true }
base64              = { workspace = true }
bytes               = { workspace = true }
chrono              = { workspace = true, features = ["serde"] }
display-error-chain = { workspace = true }
dotenv              = { workspace = true }
dptree              = { workspace = true }
duplicate           = { workspace = true }
easy-ext            = { workspace = true }
envy                = { workspace = true }
futures             = { workspace = true }
governor            = { workspace = true }
hmac                = { workspace = true }
itertools           = { workspace = true }
lazy-regex          = { workspace = true }
nanoid              = { workspace = true }
ogg-opus            = { workspace = true }
once_cell           = { workspace = true }
parking_lot         = { workspace = true }
rand                = { workspace = true }
reqwest             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
serde_with          = { workspace = true }
sqlx                = { workspace = true }
teloxide            = { workspace = true }
thiserror           = { workspace = true }
timeago             = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-error       = { workspace = true }
tracing-futures     = { workspace = true }
tracing-log         = { workspace = true }
tracing-loki        = { workspace = true }
tracing-subscriber  = { workspace = true }
url                 = { workspace = true }
wav_io              = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
