[package]
name = "xtask"

edition = "2021"
publish = false

authors = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
fs-err             = { workspace = true }
itertools          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
