[package]
name = "metrics-bat-macros"

description = "Procedural macros for `metrics-bat`"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
proc_macro = true

[dependencies]
darling     = { workspace = true }
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
