[package]
name = "snowpity-tg-macros"

description = "Procedural macros for `snowpity-tg`"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
darling     = { workspace = true }
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
