[package]
name = "snowpity-tg"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[[bench]]
harness = false
name    = "image_resize"

[build-dependencies]
vergen = { workspace = true }

[dependencies]
assert_matches              = { workspace = true }
async-trait                 = { workspace = true }
base64                      = { workspace = true }
bytes                       = { workspace = true }
chrono                      = { workspace = true, features = ["serde"] }
derivative                  = { workspace = true }
derive_more                 = { workspace = true }
display-error-chain         = { workspace = true }
dotenvy                     = { workspace = true }
dptree                      = { workspace = true }
easy-ext                    = { workspace = true }
envy                        = { workspace = true }
fast_image_resize           = { workspace = true }
from_variants               = { workspace = true }
fs-err                      = { workspace = true, features = ["tokio"] }
futures                     = { workspace = true }
http                        = { workspace = true }
humansize                   = { workspace = true }
image                       = { workspace = true }
itertools                   = { workspace = true }
lazy-regex                  = { workspace = true }
log                         = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
nanoid                      = { workspace = true }
num_enum                    = { workspace = true }
ogg-opus                    = { workspace = true }
parking_lot                 = { workspace = true }
reqwest                     = { workspace = true, features = ["json"] }
reqwest-middleware          = { workspace = true, features = ["json"] }
reqwest-retry               = { workspace = true }
sea-query                   = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
serde_with                  = { workspace = true }
serde_yaml                  = { workspace = true }
sha2                        = { workspace = true }
shlex                       = { workspace = true }
sqlx                        = { workspace = true }
strum                       = { workspace = true }
sysinfo                     = { workspace = true }
teloxide                    = { workspace = true, features = ["cache-me", "ctrlc_handler", "macros", "throttle", "trace-adaptor"] }
tempfile                    = { workspace = true }
thiserror                   = { workspace = true }
timeago                     = { workspace = true }
tokio                       = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "process"] }
tracing                     = { workspace = true }
tracing-error               = { workspace = true }
tracing-loki                = { workspace = true }
tracing-subscriber          = { workspace = true }
twitter-scraper             = { workspace = true }
url                         = { workspace = true, features = ["serde"] }
wav_io                      = { workspace = true }

metrics-bat        = { workspace = true, features = ["exporter-prometheus"] }
snowpity-tg-macros = { workspace = true }
sqlx-bat           = { workspace = true }

[dev-dependencies]
criterion   = { workspace = true }
expect-test = { workspace = true }
reqwest     = { workspace = true, features = ["blocking"] }
test-bat    = { workspace = true }
test-log    = { workspace = true }
