[package]
name = "twitter-scraper"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
version = { workspace = true }

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
serde_with = { workspace = true }
thiserror  = { workspace = true }
url        = { workspace = true, features = ["serde"] }

[dev-dependencies]
dotenvy     = { workspace = true }
expect-test = { workspace = true }
test-bat    = { workspace = true }

[build-dependencies]
cgo = { workspace = true }
